# distributed-system-project-1

./: .gitignore  README.md  bully.py  bully_election.py  improved_bully_election.py
Leader Election/: network.config
bully_election/: bully_election.py
bully_election/cpp_dummy/: CMakeLists.txt
bully_election/cpp_dummy/include/: Network.h  Rng.h  utilities.h
bully_election/cpp_dummy/src/: Network.cpp  Rng.cpp  main.cpp
cpp-instead/improved_version/: CMakeLists.txt  Network.h  Node.h  main.cpp  utilities.h
cpp-instead/improved_version/include/: Network.h  Node.h
cpp-instead/improved_version/src/: Network.cpp  Node.cpp  main.cpp
improved_bully_election/: CMakeLists.txt
improved_bully_election/failed_python_version/: improved_bully_election.py
improved_bully_election/include/: Network.h  Rng.h
improved_bully_election/src/: Network.cpp  main.cpp  test.cpp  utilities.cpp
litterature/: sources.md
tcp_sockets/: bully_election.py  bully_election2.py  bully_election_pickle.py  improved_bully_election.py  nodes.config
version_2/: bully_election.py  bully_election2.py  bully_election3.py  improved_bully_election.py  server.config  start.sh
